<resources>
    <string name="app_name">BtApp</string>

    <string name="bluetooth_enable_switch">Bluetooth</string>
    <string name="scan_button">Scan</string>
    <string name="refresh_list">Refresh list</string>

    <string name="discovery_started">Discovery started</string>
    <string name="discovery_finished">Discovery finished</string>

    <string name="device_data">Device name : %1$s\nDevice address : %2$s</string>

    <string name="unknown">Unknown</string>
    <string name="none"></string>

    <string name="bluetooth_enabled">Bluetooth enabled</string>
    <string name="bluetooth_disabled">Bluetooth disabled</string>
    <string name="bluetooth_enabling_failed">Bluetooth not enabled</string>
    <string name="no_bluetooth_device">No bluetooth device found</string>
    <string name="bluetooth_already_enabled">Bluetooth already enabled</string>
    <string name="bluetooth_scanning">Bluetooth scanning...</string>
    <string name="device_name_label">Device Name</string>
    <string name="device_address_label">Device Address</string>

    <string name="wifi_name_label">SSID</string>
    <string name="wifi_enable_switch">Wifi</string>
    <string name="wifi_disabled">Wifi disabled</string>
    <string name="wifi_scanning">Wifi scanning...</string>
    <string name="wifi_enabled">Wifi enabled</string>
    <string name="wifi_bssid_label">BSSID</string>
    <string name="location">Location:</string>
    <string name="date">Date:</string>
    <string name="current_menu">Live Scans</string>
    <string name="saved_menu">Saved Scans</string>
    <string name="scan_date">Date:</string>
    <string name="devices_count">Devices count:</string>
    <string name="networks_count">Networks count:</string>
    <string name="bluetooth_save_button">Save</string>
    <string name="scan_saved">Scan saved</string>
    <string name="scan_empty">No devices scanned</string>
    <string name="clear_list">Clear</string>

</resources>
